<?xml version="1.0"?>
<package format="2">
    <name>iai_kmr_iiwa_description</name>
    <version>0.0.0</version>
    <description>The iai_kmr_iiwa_description package</description>

    <maintainer email="stelter@uni-bremen.de">Simon Stelter</maintainer>
    <maintainer email="jeroen.schaefer@uni-bremen.de">Jeroen Schäfer</maintainer>

    <license>BSD</license>


    <buildtool_depend>catkin</buildtool_depend>


    <export>
    </export>
</package>
